# argentum-alpha

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  AGENT_GUIDE.md  CHANGELOG.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  version-bump.yml
argentum/: __init__.py  __version__.py  argentum_logging.py  context_decay.py  cost_alerts.py  exceptions.py  handoff.py  plan_lint.py  security.py  state_diff.py
argentum/argentum/cost_optimization/: batch_optimizer.py  cache.py  context_optimizer.py  cost_tracker.py  orchestrator.py  token_budget.py
argentum/cost_optimization/: __init__.py  budget_allocator.py  context_optimizer.py  context_pruner.py  cost_tracker.py  deduplicator.py  model_selector.py  orchestrator.py  prompt_optimizer.py  token_counter.py
argentum/notebooks/: 01_argentum_overview.ipynb
docs/: VERSION_MANAGEMENT.md  conf.py  index.rst
docs/api/: argentum.rst
examples/: context_decay_example.py  handoff_example.py  plan_lint_example.py  state_diff_example.py
notebooks/: 01_argentum_overview.ipynb
scripts/: bump_version.sh  version_manager.py
tests/: test_context_decay.py  test_handoff.py  test_performance.py  test_plan_lint.py  test_security.py  test_state_diff.py
