[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argentum-agent"
version = "0.2.1"
description = "Agent state tracking, debugging, and coordination utilities for AI systems"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Marco Zaccaria Di Fraia"}
]
maintainers = [
    {name = "Argentum Contributors"}
]
keywords = [
    "ai", "agent", "debugging", "state-tracking", "multi-agent", "coordination",
    "handoff", "context-decay", "plan-linting", "state-diff"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring"
]
dependencies = [
    "typing-extensions>=4.0.0; python_version<'3.10'"
]

[project.optional-dependencies]
# Enhanced plan linting with schema validation
lint = [
    "jsonschema>=4.0.0",
    "jsonpatch>=1.32"
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=5.0.0",
    "pre-commit>=2.20.0"
]

# Documentation dependencies  
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.0.0"
]

# Performance testing
perf = [
    "pytest-benchmark>=4.0.0",
    "memory-profiler>=0.60.0"
]

# All optional dependencies (empty - use individual groups)
all = []

[project.urls]
Homepage = "https://github.com/MarsZDF/argentum"
Repository = "https://github.com/MarsZDF/argentum"
Documentation = "https://argentum-agent.readthedocs.io"
"Bug Tracker" = "https://github.com/MarsZDF/argentum/issues"
Changelog = "https://github.com/MarsZDF/argentum/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["argentum*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
argentum = ["py.typed"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories to exclude
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# MyPy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=argentum",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=40"
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance benchmarks"
]

# Coverage configuration
[tool.coverage.run]
source = ["argentum"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "setup.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

# Flake8 configuration
[tool.flake8]
max-line-length = 100
extend-ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long (handled by black)
    "W503",  # line break before binary operator
]
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    ".eggs",
    "*.egg",
]